--- a/Webpack/package.json
+++ b/Webpack/package.json
@@ -4,7 +4,8 @@
   "description": "Proyecto web para aprender webpack",
   "main": "src/index.js",
   "scripts": {
-    "webpack": "webpack",
+    "build": "webpack --mode=production",
+    "dev": "webpack --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
