--- a/Babel/package.json
+++ b/Babel/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto para aprender la tecnología webpack usando babel",
   "main": ".src/index.js",
   "scripts": {
-    "dev": "webpack --mode=development",
+    "dev": "rm -rf dist && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
