--- a/Babel/package.json
+++ b/Babel/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto para aprender la tecnología webpack usando babel",
   "main": ".src/index.js",
   "scripts": {
-    "dev": "rm -rf dist && webpack",
+    "dev": "rimraf dist && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/manuelhm1993/mh-empaquetadores#readme",
   "devDependencies": {
+    "rimraf": "^5.0.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
