--- a/Babel/package.json
+++ b/Babel/package.json
@@ -24,6 +24,9 @@
   },
   "homepage": "https://github.com/manuelhm1993/mh-empaquetadores#readme",
   "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@babel/preset-env": "^7.22.10",
+    "babel-loader": "^9.1.3",
     "rimraf": "^5.0.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
